2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (vm_set_obase): Check for valid values.
	(vm_set_omode): Likewise.
	* libpoke/pvm.jitter (popob): Do not raise exceptions.
	(popom): Likewise.

2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.c (pkl_asm_insn_binop): Check for division by
	zero before div and mod.
	* libpoke/pvm.jitter (PVM_CHECKED_BINOP): Remove macro.
	(divi): Do not raise division by zero exception.
	(diviu): Likewise.
	(divl): Likewise.
	(divlu): Likewise.
	(modi): Likewise.
	(modiu): Likewise.
	(modl): Likewise.
	(modlu): Likewise.

2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (PVM_NEG_SIGNED): Do not check for overflow.
	(negi): Remove jitter `branching' annotation, and use PVM_UNOP.
	(negl): Likewise.
	(addi): Likewise.
	(addl): Likewise.
	(subi): Likewise.
	(subl): Likewise.
	(muli): Likewise.
	(mull): Likewise.
	(divi): Likewise.
	(divl): Likewise.
	(modi): Likewise.
	(modl): Likewise.
	(powi): Likewise.
	(powl): Likewise.
	(PVM_NEG_SIGNED): Remove macro.
	(PVM_ADD_SIGNED): Likewise.
	(PVM_SUB_SIGNED): Likewise.
	(PVM_MUL_SIGNED): Likewise.
	(PVM_DIV_SIGNED): Likewise.
	(PVM_MOD_SIGNED): Likewise.
	(PVM_POWOP_SIGNED): Likewise.

2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.c (pkl_asm_insn_binop): Check for signed
	overflow whenever appropriate.
	(pkl_asm_insn): Handle signed overflow macro-instructions.

2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def (PKL_INSN_NEGOF): New macro-instruction.
	(PKL_INSN_ADDOF): Likewise.
	(PKL_INSN_SUBOF): Likewise.
	(PKL_INSN_MULOF): Likewise.
	(PKL_INSN_DIVOF): Likewise.
	(PKL_INSN_MODOF): Likewise.
	(PKL_INSN_POWOF): Likewise.
	* libpoke/pkl-asm.c (pkl_asm_insn_binop): Add support for integer
	overflow checking instructions.

2023-02-07  Indu Bhagat  <indu.bhagat@oracle.com>

	* pickles/sframe.pk: Use camel casing for types consistently.
	* pickles/sframe-dump.pk: Likewise.
