@@ -1,5 +1,16 @@
 2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pvm.jitter (PVM_BINOP_SL): Remove macro.
+	(bsli): Use PVM_BINOP.
+	(bsliu): Likewise.
+	(bsll): Likewise.
+	(bsllu): Likewise.
+
+	* libpoke/pkl-asm.c (pkl_asm_insn_binop): Check for UB in SL
+	instructions and raise exception consequently.
+
+2023-02-07  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-rt.pk (vm_set_obase): Check for valid values.
 	(vm_set_omode): Likewise.
 	* libpoke/pvm.jitter (popob): Do not raise exceptions.
